--- a/index.html
+++ b/index.html
@@ -4,31 +4,22 @@
     <title>AnyChart Example</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.anychart.com/releases/v8/js/anychart-bundle.min.js"></script>
+    <script src="https://cdn.anychart.com/releases/v8/js/anychart-base.min.js"></script>
+    <script src="https://cdn.anychart.com/releases/v8/js/anychart-ui.min.js"></script>
+    <script src="https://cdn.anychart.com/releases/v8/js/anychart-exports.min.js"></script>
+    <link href="https://cdn.anychart.com/releases/v8/css/anychart-ui.min.css" type="text/css" rel="stylesheet">
+    <link href="https://cdn.anychart.com/releases/v8/fonts/css/anychart-font.min.css" type="text/css" rel="stylesheet">
+    
+
 </head>
 <body>
     <header>
         <h1>Welcome to Banana Bonanza!</h1>
     </header>
     <div id="container" style="width: 100%; height: 400px;">
-        <script>
-            anychart.onDocumentReady(function() {
-                var data = {
-                    header: ["Name", "Amount"],
-                    rows: [
-                        ["Apples", 5],
-                        ["Bananas", 7],
-                        ["Grapes", 2],
-                        ["Oranges", 8]
-                    ]
-                };
-                var chart = anychart.column();
-                chart.data(data);
-                chart.title("Fruit Inventory");
-                chart.container("container");
-                chart.draw();
-            });
-        </script>
+        <script src="stocks.js"></script>
     </div>
+
     <main>
 
         <section class="banana-info">
