--- a/index.html
+++ b/index.html
@@ -29,13 +29,9 @@
             <h2>Why Bananas Are Great</h2>
             <p>Bananas are full of vitamins and minerals, they're a great source of energy, and they can be used in a variety of recipes. Plus, they come in their own convenient packaging!</p>
         </section>
-        <section class="banana-recipes">
-            <h2>Favorite Banana Recipes</h2>
-            <ul>
-                <li>Banana Bread</li>
-                <li>Banana Pancakes</li>
-                <li>Banana Smoothie</li>
-            </ul>
+        <section class="flex-container">
+            <div>1</div>
+            <div>2</div>
         </section>
     </main>
     <footer>
